deployment/05_securitydb.yaml
#
# Copyright 2021 JSquad AB
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securitydb-deployment
  labels:
    name: securitydb
    zone: prod
    version: v1
spec:
  selector:
    matchLabels:
      app: securitydb
  template:
    metadata:
      labels:
        app: securitydb
    spec:
      containers:
        - name: securitydb
          image: postgres:9.6.20
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: security-postgres-data
              mountPath: "/var/lib/postgresql/data"
      volumes:
        - name: security-postgres-data
          persistentVolumeClaim:
            claimName: security-postgres-data-disk
