deployment/11_openbank_spring_service.yaml
#
# Copyright 2021 JSquad AB
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

---
apiVersion: v1
kind: Service
metadata:
  name: openbank-spring-service
spec:
  selector:
    app: openbank-spring
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
      name: openbank-spring-service
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: openbank-spring-monitoring
