deployment/openbankdb_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openbankdb
spec:
  selector:
    app: openbankdb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
