deployment/securitydb_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: securitydb
spec:
  selector:
    app: securitydb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
