deployment/worldapi_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: worldapi-service
spec:
  selector:
    app: worldapi
  ports:
    - protocol: TCP
      port: 1080
      targetPort: 1080
