deployment/openbank_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: openbank-ingress-https
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: openbank-spring-service
              servicePort: 8443
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: openbank-ingress-http
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - http:
        paths:
          - path: /actuator
            backend:
              serviceName: openbank-spring-service
              servicePort: 8081
